Wed Feb 22 20:37:00 UTC 2006 Frank Rehberger <frehberger@prismtech.com>
        * tao/PluggableMessaging.h: Remove abstract operation:
        read_message, missing_data, get_message_data. Add abstract
        operation parse_next_message (), consolidate_fragmented_message,
        discard_fragmented_message. 

        * tao/GIOPMessageBase.{h,cpp}: Remove implementation for
        read_message. Add parse_incoming_messages. Add implementation for
        new abstract methods consolidate_fragmented_message,
        parse_next_message, discard_fragmented_message. Declare as private
        parse_incoming_messages, parse_request_id.  Add new member
        attribute fragment_stack_ of type Incoming_Message_Stack. Handle
        TAO_GIOP_MESSAGE_ERROR not as error. For incomplete messages of
        unknown size, allocating message_blocks of size
        ACE_CDR::DEFAULT_BUFSIZE. Handle memory allocation failures in
        code. Wrap output-strings with ACE_TEXT macro.
            
        * tao/GIOP_Message_Lite.{h,cpp}: Remove implementation of
        read_message and get_message_data. Handle
        GIOP_MESSAGE_CANCELREQUEST. IMplement new virtual method
        parse_next_message, Handle out-of-memory cases. Dummy
        implementations for consolidate_fragmented_message and
        discard_fragmented_message.

        * tao/Incoming_Message_Stack.{h,cpp}: New class providing stack
        operations for TAO_Queued_Data, operations do not require dynamic
        memory allocation.

        * tao/Incoming_Message_Queue.{h,cpp,inl}: remove obsolet
        operations for interface TAO_Incoming_Message_Queue: copy_tail,
        is_tail_complete, is_head_complete, is_tail_fragmented,
        missing_data_tail, find_fragment_chain. Change return type to
        "int" for operation consolidate, return value -1 indicating out of
        memory cases.
        
        * tao/Transport.{h,cpp}: Major changes: New implementation of